--- a/config.json
+++ b/config.json
@@ -1,6 +1,10 @@
-[
-    {
-    "nome": "Nome da impressora",
-    "ip": "10.0.0.1"
-    }
-]
+{
+    "email": "seuemail@seuprovedor.com.br",
+    "impressoras": [
+        {"nome": "gerencia",
+            "ip": "0.0.0.0"},
+            {"nome": "rh",
+            "ip": "0.0.0.0"}
+            ],
+    "api_url": "localhost/monitoramento_impressora/api.php"
+}
